--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,12 @@
 		<version>1.1.7.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <start-class>de.davidschilling.Application</start-class>
+        <java.version>1.8</java.version>
+        <tomcat.version>8.0.8</tomcat.version>
+    </properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -51,11 +56,6 @@
 		</dependency>
 	</dependencies>
 
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<start-class>de.davidschilling.Application</start-class>
-		<java.version>1.8</java.version>
-	</properties>
 
 	<build>
 		<plugins>
