--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,8 @@ spring.datasource.url=jdbc:mysql://localhost/highscore
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
+spring.datasource.testOnBorrow=true
+spring.datasource.validationQuery=SELECT 1
 spring.jpa.hibernate.ddl-auto=update
 server.port=8080
 #spring.thymeleaf.cache=false
